<resources>
    <string name="app_name">急救药品智能管理系统</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="hospital">医院代码:</string>
    <string name="user">用&#160;&#160;户&#160;&#160;名:</string>
    <string name="password">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码:</string>
    <string name="loading">登&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="title_activity_first_aid">FirstAidActivity</string>
    <string name="title_activity_information_notice">InformationNoticeActivity</string>
    <string name="title_activity_drug_supply">DrugSupplyActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_cart_sign">CartSignActivity</string>

    <string name="scanning">条码扫描</string>
    <string name="firstaid">急救项目</string>
    <string name="information_notic">信息通知</string>
    <string name="drug_supply">药物补给</string>
    <string name="change_password">修改密码</string>
    <string name="cart_sign">急救小推车签收</string>
    <string name="old_password">原&#160;&#160;密&#160;&#160;码：</string>
    <string name="new_password">新&#160;&#160;密&#160;&#160;码：</string>
    <string name="confirm_password">确认密码：</string>
    <string name="ture">确定</string>
    <string name="dises">取消</string>
    <string name="title_activity_changed">ChangedActivity</string>

    <string name="reloading">重新登录</string>
    <string name="title_activity_show_result">ShowResultActivity</string>
    <string name="title_activity_input_borcode">InputBorcodeActivity</string>
    <string name="title_activity_first_aid_result">FirstAidResult</string>
    <string name="title_activity_medicine_supply">MedicineSupplyActivity</string>
    <string name="title_activity_sign_small_car">SignSmallCarActivity</string>
    <string name="title_activity_sign_project">SignProjectActivity</string>
    <string name="usage">1、静脉注射肾上腺素lmg／次，每3～5分钟l次。\n2、胺碘酮150～300mg；\n3、利多卡因1.0～1.5mg／kg；\n4、硫酸镁1～2g；\n5、肾上腺素1mg／次或静脉注射阿托品lmg</string>
    <string name="title_activity_signed">SignedActivity</string>
</resources>
