<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.admin.jjypznglxt.activity.ChangePasswordActivity">
    <android.support.v7.widget.Toolbar

        android:id="@+id/toobar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#5500ff00">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_up"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="修改密码"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar
        >
    
    <TextView
        android:id="@+id/oldpassword"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:layout_below="@+id/toobar"
        android:textSize="16sp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"/>
    <EditText
        android:id="@+id/et_oldpwd"
        android:textColor="@android:color/black"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:textSize="16sp"
        android:background="@drawable/et_bg_shape"
        android:inputType="textPassword"
        android:layout_alignBaseline="@id/oldpassword"
        android:layout_toRightOf="@+id/oldpassword"
        android:layout_below="@+id/toobar"
        android:layout_marginTop="100dp"/>
    <TextView
        android:id="@+id/newpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oldpassword"
        android:text="@string/new_password"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
      android:layout_alignRight="@+id/oldpassword"/>
    <EditText
        android:id="@+id/et_newpwd"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@+id/newpassword"
        android:inputType="textPassword"
        android:background="@drawable/et_bg_shape"
        android:layout_below="@+id/oldpassword"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_alignBaseline="@id/newpassword"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/confirmpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:layout_alignRight="@+id/newpassword"
        android:layout_below="@+id/newpassword"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/et_confirmPwd"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:background="@drawable/et_bg_shape"
        android:layout_alignBaseline="@id/confirmpassword"
        android:textColor="@android:color/black"
        android:layout_toRightOf="@+id/confirmpassword"
        android:layout_below="@+id/newpassword"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/queding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ok"
        android:text="@string/ture"
        android:textSize="16dp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:background="@drawable/u21"
        android:layout_below="@+id/confirmpassword"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="70dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/queding"
        android:layout_marginLeft="50dp"
        android:gravity="center"
        android:onClick="cancel"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        android:text="@string/dises"
        android:background="@drawable/u21"
        android:layout_below="@+id/confirmpassword"
        android:layout_marginTop="70dp"
        />

</RelativeLayout>
