<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.jjypznglxt.LoadingActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/u2"
            android:scaleType="fitXY"
            />

        <ImageView
            android:id="@+id/jijiu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/u27"
            android:layout_marginRight="45dp"
            android:layout_alignParentEnd="true"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/u25"
            android:layout_below="@+id/jijiu"
            android:layout_alignParentEnd="true"
            />
        <TextView
            android:id="@+id/hospitalcode"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:text="@string/hospital"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#fff"
            android:layout_marginLeft="50dp"/>
        <EditText
            android:id="@+id/et_hospitalcode"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:background="@drawable/et_bg_shape"
            android:layout_alignBaseline="@id/hospitalcode"
            android:layout_toRightOf="@+id/hospitalcode"
            android:layout_marginTop="350dp"
            />
        <TextView
            android:id="@+id/user"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_below="@+id/hospitalcode"
            android:layout_alignRight="@+id/hospitalcode"
            android:textColor="#fff"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:id="@+id/et_username"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_below="@+id/hospitalcode"
            android:background="@drawable/et_bg_shape"
            android:layout_marginTop="20dp"
            android:layout_alignBaseline="@id/user"
            android:layout_toRightOf="@+id/user"
            />
        <TextView
            android:id="@+id/password"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/user"
            android:layout_alignRight="@+id/user"
            android:textColor="#fff"
            android:textSize="16sp"
            />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@+id/password"
            android:layout_alignBaseline="@id/password"
            android:background="@drawable/et_bg_shape"
            android:layout_below="@+id/user"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_bg"
            android:text="@string/loading"
            android:onClick="onClick"
            android:layout_below="@+id/password"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textSize="18sp"/>
    </RelativeLayout>


</LinearLayout>